--- a/20151127_TOPIX/20151127_TOPIX/StockCracker.ipynb
+++ b/20151127_TOPIX/20151127_TOPIX/StockCracker.ipynb
@@ -216,7 +216,7 @@
     "from colorama import init\n",
     "init(autoreset=True)\n",
     "from colorama import Fore, Back, Style\n",
-    "#---- for statics\n",
+    "#---- for statistics\n",
     "from scipy import stats\n",
     "\n",
     "class StockCracker:\n",
@@ -1279,7 +1279,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": []
   },
